--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">JobDispatcherPractice</string>
+    <string name="button_title_set_alarm">set alarm</string>
 </resources>
