--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">JobDispatcherPractice</string>
+    <string name="app_name_not_alarm">Notepad</string>
     <string name="button_title_set_10_sec_alarm">set 10 sec alarm</string>
     <string name="button_title_set_60_sec_alarm">set 1 min alarm</string>
 </resources>
